--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build && copyfiles -f src/plugin.json dist/js",
-    "lint": "vue-cli-service lint",
-    "deploy": "lt --port 5000"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -17,12 +16,12 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
-    "@zyllio/zy-sdk": "^0.0.10",
+    "@zyllio/zy-cli": "latest",
+    "@zyllio/zy-sdk": "latest",
     "babel-eslint": "^10.1.0",
     "copyfiles": "^2.4.1",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0",
-    "localtunnel": "^2.0.2"
+    "eslint-plugin-vue": "^7.0.0"
   },
   "eslintConfig": {
     "root": true,
