--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build && copyfiles -f src/plugin.json dist/js",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "tester": "zyllio ./dist/js app.js custom-counter"
+
   },
   "dependencies": {
     "core-js": "^3.6.5",
