--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build && copyfiles -f src/plugin.json dist/js",
     "lint": "vue-cli-service lint",
-    "tester": "zyllio ./dist/js app.js custom-counter"
+    "tester": "zyllio ./dist/js app.js custom-vuejs-counter"
   },
   "dependencies": {
     "core-js": "^3.6.5",
